# typing-game-old

./: Cargo.toml  README.md
client/: .env  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  index.tsx
client/src/components/: Button.css  Button.tsx  Input.css  Input.tsx  Loading.css  Loading.tsx
client/src/contexts/: game_context.ts
client/src/pages/: Game.css  Game.tsx  GameCreation.css  GameCreation.tsx  GameJoin.css  GameJoin.tsx  games.tsx
client/src/types/: game-data.tsx  game_data.tsx  websocket.ts
client/src/utils/: readBlob.ts
rust/src/: http.rs  main.rs
server/: package.json  tsconfig.json
server/src/: games.ts  http.ts  index.ts  websocket.ts
server/src/games/: game.ts  instances.ts  player.ts  text-generator.ts
server/src/http/controllers/: game-controller.ts
server/src/http/routes/: games-routes.ts  index.ts
server/src/http/types/: game-controller-types.ts
server/src/services/: random_text.ts
server/src/websocket/: events.ts  server.ts  types.ts
src/: game.rs  http.rs  main.rs
typescript/: package.json
typescript/src/: exceptions.ts  games.ts  http.ts  index.ts  websocket.ts
