[package]
name = "typing-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
httparse = "1.8.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
